freesia/k8s/apps/prom-stack-v3/prometheus/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-v3-kube-prometh-alertmanager
  namespace: thanos
  labels:
    app: kube-prometheus-stack-alertmanager
    self-monitor: "true"

    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: prometheus-v3
    app.kubernetes.io/version: "51.10.0"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-51.10.0
    release: "prometheus-v3"
    heritage: "Helm"
spec:
  ports:
    - name: http-web
      port: 9093
      targetPort: 9093
      protocol: TCP
    - name: reloader-web
      appProtocol: http
      port: 8080
      targetPort: reloader-web
  selector:
    app.kubernetes.io/name: alertmanager
    alertmanager: prometheus-v3-kube-prometh-alertmanager
  type: "ClusterIP"
